resources/css/oc.css
body,
html,
.body,
table.body {
  background-color: white;
  color: #34414F;
  width: 100%;
  height: 100%;
}

* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/*table {
  background-color: #FBFAF7 !important;
}*/

table th, 
table.body .columns,
table.body .column {
  padding: 0px !important;
}

table th.body-spacer {
  background-color: white !important;
}

.email-content h1, .email-content h2, .email-content h3, .email-content h4,
.email-content h5, .email-content h6, .email-content p, .email-content td,
.email-content th, .email-content a {
  text-align: center;
}

.email-content .text-left {
  text-align: left;
}

h1 {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 18px;
  font-weight: normal;
  color: #34414F;
  margin: 0px;
  text-align: center;
}

h2 {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 16px;
  font-weight: bold;
  color: #3FBD7C;
  margin: 0px;
  text-align: center;
}

h2.digest-post-title {
  font-size: 16px;
  color: #34414f;
  text-decoration: underline;
  font-family: Helvetica, Arial, sans-serif !important;
  font-weight: normal;
}

p {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 16px;
  color: #34414F;
  line-height: 1.5;
  margin: 0px;
  text-align: center;
}

p.board-name {
  color: #888D94;
  font-size: 18px;
  font-family: Helvetica, Arial, sans-serif !important;
  letter-spacing: 0;
  line-height: 22px;
}

p.attribution {
  font-size: 12px;
  line-height: 14px;
  color: #888D94;
}

p.attribution label.new-comments {
  color: #3FBD7C;
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 12px;
  font-weight: bold;
}

span.note-body {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 14px;
  font-weight: 400;
}

span.button-text {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 14px;
  font-weight: bold;
  padding-top: 13px;
}

table.cta-button span.button-text {
  color: white;
}

table.post-button span.button-text {
  color: #3FBD7C;
}

table.footer p {
  color: #C4C6C9;
  font-size: 14px;
}

table.footer a {
  font-weight: bold;
  color: #3FBD7C;
}

center > table.header-table {
  border-bottom: 1px solid rgba(36, 45, 66, 0.1);
}

.header-table {
  background-color: white !important;
  max-width: 564px;
  width: 100%;
  text-align: center;
  vertical-align: middle;
}

div.digest-date {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 14px;
  color: rgba(52, 65, 79, 0.5);
  text-align: right;
  margin-top: 8px;
  line-height: 17px;
}

center > table.footer-table {
  border-top: 1px solid rgba(36, 45, 66, 0.1);
}

.footer-table {
  background-color: white !important;
  max-width: 564px;
  width: 100%;
  text-align: center;
  vertical-align: middle;
}

.footer-table.digest-footer-table {
  border-top: 1px solid rgba(36, 45, 66, 0.1);
}

.email-content {
  max-width: 564px;
  width: 100%;
  background-color: white !important;
  text-align: center;
  vertical-align: middle;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}

.follow-up-email-content {
  max-width: 564px;
  width: 100%;
  text-align: center;
  vertical-align: middle;
  border-top: 1px solid rgba(36, 45, 66, 0.1);
  border-bottom: 1px solid rgba(36, 45, 66, 0.1);
}

.follow-up-email-content a.follow-up-button-cta {
  width: 120px;
  display: block;
  font-size: 14px;
  font-weight: bold;
  color: white;
  background-color: #52C489;
  border-radius: 6px;
  text-align: center;
  padding: 11px 0px 11px 0px;
  margin: 0 auto;
}

.follow-up-post-block {
  background-color: #ececec;
  padding: 24px 24px 24px 24px;
  max-width: 440px;
  border-radius: 6px;
  text-align: left;
  margin: 0 auto;
  display: grid;
}

.follow-up-post-block h2 {
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 16px;
  color: #34414f;
  font-weight: normal;
  line-height: 18px;
  text-align: left;
}

.follow-up-post-block h2 span.post-title {
  color: #34414f;
  text-decoration: underline;
  text-align: left;
}

.follow-up-post-block .attribution {
  text-align: left;
}

img.follow-up-author {
  text-align: center;
  margin: 0 auto;
  vertical-align: middle;
  width: 40px;
  height: 40px;
}

img.reminder-author {
  text-align: center;
  margin: 0 auto;
  vertical-align: middle;
  width: 80px;
  height: 80px; 
}

h1.follow-up-header {
  text-align: center;
  font-family: Helvetica, Arial, sans-serif !important;
  font-weight: normal;
  font-size: 20px;
  line-height: 24px;
  color: #34414f;
}

h1.invite-header {
  text-align: center;
  font-family: Helvetica, Arial, sans-serif !important;
  font-weight: normal;
  font-size: 20px;
  line-height: 24px;
  color: #34414f;
  text-align: center;
}

.digest-email-content {
  max-width: 564px;
  width: 100%;
  text-align: center;
  vertical-align: middle;
  border-top: 1px solid rgba(36, 45, 66, 0.1);
}

table.email-content tr td.vertical-padding, table.email-content tr td.columns.vertical-padding {
  padding: 0 24px !important;
}

.email-content > tr:first-child, .email-content > tr:first-child > td:first-child, .email-content > tr:first-child > th:first-child {
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.digest-content {
  
}

.digest-content label.digest-group-title {
  font-family: Helvetica, Arial, sans-serif !important;
  font-weight: bold;
  font-size: 12px;
  text-transform: uppercase;
  color: rgba(52, 65, 79, 0.5);
}

.digest-content table, .digest-content table tr {
  
}

.email-content > tr:last-child,
.email-content > tr:last-child > td:last-child,
.email-content > tr:last-child > th:last-child {
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.email-content tr, .email-content tr td {
  background-color: white !important;
}

.header-bottom-border {
  border-bottom: 1px solid #F0F0F1;
}

.footer-top-border {
  border-top: 1px solid #F0F0F1;
}
/* ... */

